<resources>
    <string name="app_name">My Habits</string>
    <string name="add_name">Название</string>
    <string name="add_description">Описание</string>
    <string name="save">Сохранить</string>
    <string name="choose_type">Выберите тип</string>
    <string name="choose_priority">Выберите приоритет</string>
    <string name="repeat_number">Количество выполнений</string>
    <string name="periodicity">Периодичность</string>
    <string name="good_habit_type">Хорошая</string>
    <string name="bad_habit_type">Плохая</string>
    <string name="habit_priority">Приоритет привычки</string>
    <string name="add_period">Повторяется раз в</string>
    <string name="add_habit">Добавить привычку</string>
    <string name="close">Закрыть</string>
    <string name="type_not_selected">Тип не выбран</string>
    <string name="once_a">раз в</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="repet_num_not_specified">Не указано количество повторений</string>
    <string name="period_not_selected">Не указана периодичность</string>
    <string name="no_title">(Нет заголовка)</string>
    <string name="no_description">(Нет описания)</string>
    <string name="priority">Приоритет</string>
    <string name="type">Тип</string>
    <string name="color">Цвет</string>
    <string name="home_screen">Домашний экран</string>
    <string name="about_app">О приложении</string>
    <string name="open_drawer">Открыть</string>
    <string name="close_drawer">Закрыть</string>
    <string name="about_app_text">My Habits - трекер привычек.</string>
    <string name="app_author_and_year">Тимур Хабибулин. 2023.</string>
    <string name="good_habits">Хорошие</string>
    <string name="bad_habits">Плохие</string>
    <string name="sort_and_filter">Фильтры и сортировка</string>
    <string name="sort_by">Сортировать по</string>
    <string name="search">Поиск</string>


    <string-array name="habit_priorities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="period">
        <item>День</item>
        <item>Неделя</item>
        <item>Месяц</item>
        <item>Год</item>
    </string-array>

    <string-array name="sort_types">
        <item>Приоритету</item>
        <item>Количеству выполнений</item>
        <item>Количеству повторений</item>
    </string-array>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_image">note_image</string>
    <string name="repeat_image">repeat_image</string>
    <string name="event_repeat_image">event_repeat_image</string>
    <string name="color_palette">color_palette</string>
    <string name="habit_done">Habit done</string>
    <string name="sort_by_ascending">Sort by ascending</string>
    <string name="sort_by_descending">Sort by descending</string>

</resources>