<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/habitFilter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D1D1D1"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="15dp"
    android:paddingBottom="10dp"
    tools:context=".presentation.view.fragments.HabitFilterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sort_and_filter"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/search"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/sort_by"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sort_type_spinner"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/sort_ascend_IV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/arrow_upward"
            android:contentDescription="@string/sort_by_ascending"/>

        <ImageView
            android:id="@+id/sort_desc_IV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_downward"
            android:contentDescription="@string/sort_by_descending"/>

    </LinearLayout>

</LinearLayout>