<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameET"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="no"
                android:hint="@string/add_name"
                android:inputType="textMultiLine"
                android:textSize="28sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_weight="0"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/note_image"
                    android:textAlignment="gravity"
                    app:srcCompat="@drawable/notes" />

                <EditText
                    android:id="@+id/descriptionET"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:autofillHints="no"
                    android:hint="@string/add_description"
                    android:inputType="textMultiLine"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="20dp">

                <RadioGroup
                    android:id="@+id/habitTypeRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_type"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/habitType1RB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/good_habit_type"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/habitType2RB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bad_habit_type"
                        android:textSize="18sp" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_priority"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/prioritySpinner"
                        style="@android:style/Widget.DeviceDefault.Light.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:contentDescription="@string/habit_priority" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/repeat_image"
                    app:srcCompat="@drawable/replay_" />

                <TextView
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:autofillHints="no"
                    android:text="@string/repeat_number"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextNumberDecimal"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edit_text_border"
                    android:inputType="number"
                    android:textSize="24sp"
                    android:autofillHints="no" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/event_repeat"
                    android:contentDescription="@string/event_repeat_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:text="@string/add_period"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextNumber2"
                            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                            android:layout_width="80dp"
                            android:layout_height="65dp"
                            android:layout_marginStart="15dp"
                            android:background="@drawable/edit_text_border"
                            android:inputType="number"
                            android:textSize="24sp"
                            android:importantForAutofill="no" />

                        <Spinner
                            android:id="@+id/spinner6"
                            style="@android:style/Widget.DeviceDefault.Light.Spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="65dp"
                            android:layout_marginStart="15dp"
                            android:background="@drawable/edit_text_border" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/palette"
                    android:contentDescription="@string/color_palette" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/currentColor"
                            android:layout_width="50dp"
                            android:layout_height="75dp"
                            android:layout_marginVertical="15dp"
                            android:layout_marginStart="15dp"
                            app:srcCompat="@drawable/rectangle" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/rgbColor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="20dp"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/hsvColor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <HorizontalScrollView
                        android:id="@+id/colorsScroll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp">

                        <LinearLayout
                            android:id="@+id/colors_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="55dp" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="397dp" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="72dp" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>