<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/habit_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/rectangle"
    android:elevation="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/habit_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:gravity="center_vertical"
        android:textColor="#191919"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:maxLines="2"
        android:textColor="#191919"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@style/TextViewCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                style="@style/TextViewCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                android:id="@+id/textView5"
                style="@style/TextViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                style="@style/TextViewCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color" />

            <View
                android:id="@+id/habit_color"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            style="@style/TextViewCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/periodicity" />

        <TextView
            android:id="@+id/textView9"
            style="@style/TextViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>